# majorproject

./: .env  Cargo.toml  README.md
migrations/: 20240101000000_create_initial_tables.sql
src/: db.rs  main.rs
src/auth/: middleware.rs  mod.rs
src/email/: mod.rs
src/handlers/: auth.rs  comments.rs  knowledge_base.rs  mod.rs  tickets.rs
src/models/: comment.rs  knowledge_base.rs  mod.rs  ticket.rs  user.rs
src/routes/: mod.rs
src/ws/: mod.rs
