[package]
name = "major"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
jsonwebtoken = "9.2"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
futures-util = "0.3" 